--- a/src/components/MailData.module.css
+++ b/src/components/MailData.module.css
@@ -1,9 +1,33 @@
+.complete {
+    display: flex;
+    align-items: baseline;
+    gap: 1rem;
+  }
+  
+  .complete i {
+    color: #127dff;
+  }  
+
 .main {
     margin-bottom: 10px;
     border: 2px solid black;
     border-radius: 5px;
     padding: 1rem;
     margin-bottom: 20px;
+    flex-basis: 95%;
+  }
+  .mail-header {
+    cursor: pointer;
+  }
+  
+  .head {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .mailId i{
+    color:black;
   }
   
   .mailId {
@@ -25,5 +49,7 @@
   
   .body {
     margin-left: 10px;
+    margin-top: 20px;
     font-family: Arial;
   }
+  
